@@ -3,6 +3,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* extend the UDP tracker protocol to include the request string from the tracker URL
 	* fix mingw build for linux crosscompiler
 
 0.16.3 release
